traversal.snake.Snake.scala.error
Compilation error:
Snake:18: error: type mismatch;
 found   : Unit
 required: Boolean
      else if (getDirection()==Direction.OUEST)
           ^